[package]
name = "rust_fn_locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
serde_json = "1.0.107"
psutil = "3.2.2"
skia-safe = "0.67.0"
